// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render active and joined and completed challenge item 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": false,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      >
        <Flex
          value={0}
        >
          <Icon
            name="checkIcon"
            style={
              Object {
                "color": "#44E4AB",
                "fontSize": 20,
              }
            }
            type="MissionHub"
          />
        </Flex>
      </Flex>
    </Flex>
  </Button>
</Card>
`;

exports[`render active and joined challenge item 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": false,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      />
    </Flex>
  </Button>
  <Button
    buttonTextStyle={
      Object {
        "fontSize": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#44E4AB",
        "height": undefined,
        "paddingVertical": 8,
      }
    }
    text="I DID IT"
    type="primary"
  />
</Card>
`;

exports[`render active and joined challenge item with edit 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": false,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      />
    </Flex>
  </Button>
  <Button
    buttonTextStyle={
      Object {
        "fontSize": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#44E4AB",
        "height": undefined,
        "paddingVertical": 8,
      }
    }
    text="I DID IT"
    type="primary"
  />
</Card>
`;

exports[`render active challenge item 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": false,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      />
    </Flex>
  </Button>
  <Button
    buttonTextStyle={
      Object {
        "fontSize": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": undefined,
        "paddingVertical": 8,
      }
    }
    text="JOIN"
    type="primary"
  />
</Card>
`;

exports[`render active challenge item with edit 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": false,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      />
    </Flex>
  </Button>
  <Button
    buttonTextStyle={
      Object {
        "fontSize": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": undefined,
        "paddingVertical": 8,
      }
    }
    text="JOIN"
    type="primary"
  />
</Card>
`;

exports[`render past and joined and completed challenge item 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": true,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      >
        <Flex
          value={0}
        >
          <Icon
            name="checkIcon"
            style={
              Object {
                "color": "#44E4AB",
                "fontSize": 20,
              }
            }
            type="MissionHub"
          />
        </Flex>
      </Flex>
    </Flex>
  </Button>
</Card>
`;

exports[`render past and joined challenge item 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-22",
              "id": "1",
              "isPast": true,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      />
    </Flex>
  </Button>
</Card>
`;

exports[`render past challenge item 1`] = `
<Card
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "marginHorizontal": 20,
      "marginVertical": 5,
    }
  }
>
  <Button
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    type="transparent"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "padding": 20,
        }
      }
      value={1}
    >
      <Flex
        direction="column"
        value={5}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "marginBottom": 3,
            }
          }
        >
          Read "There and Back Again"
        </MyText>
        <Translate(ChallengeStats)
          challenge={
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "created_at": "2018-09-01T12:00:00Z",
              "creator_id": "person1",
              "end_date": "2018-09-10T23:59:59.999Z",
              "id": "1",
              "isPast": true,
              "organization_id": "456",
              "title": "Read \\"There and Back Again\\"",
            }
          }
          small={true}
          style={
            Object {
              "paddingTop": 8,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        justify="center"
        value={1}
      />
    </Flex>
  </Button>
</Card>
`;
